--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
       <title>VALORANT Collection Maker</title>
       <link rel="icon" href="images/VALORANT.png">
       <link href="style.css" rel="stylesheet" type="text/css">
-      <script src="script.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    </head>
    <header>
@@ -882,7 +881,7 @@
                   <option value="images/sheriff/Sheriff_Death_Wish.png">DEATH WISH (YORU)</option>
                   <option value="images/sheriff/Sheriff_Game_Over.png">GAME OVER (JETT)</option>
                   <option value="images/sheriff/Sheriff_Ion.png">ION</option>
-                  <option value="images/sheriff/Sheriff_K_TAC.png"><K/TAC>/option>
+                  <option value="images/sheriff/Sheriff_K_TAC.png"><K/TAC></option>
                   <optgroup label="LIGHTWAVE">
                      <option value="images/sheriff/Sheriff_Lightwave.png">LIGHTWAVE</option>
                      <option value="images/sheriff/Sheriff_Lightwave_Black.png">LIGHTWAVE (BLACK)</option>
@@ -1001,7 +1000,7 @@
                   <option value="images/melee/Melee_Spline.png">SPLINE</option>
                   <optgroup label="TETHERED REALMS">
                      <option value="images/melee/Melee_Tethered_Realms.png">TETHERED_REALMS</option>
-                     <option value="images/melee/Melee_Tethered_Realms_Dual.png">TETHERED_REALMS (DUAL</option>
+                     <option value="images/melee/Melee_Tethered_Realms_Dual.png">TETHERED_REALMS (DUAL)</option>
                   </optgroup>
                   <option value="images/melee/Melee_VALORANT_Go_Vol1.png">VALORANT GO VOL1</option>
                   <option value="images/melee/Melee_Winterwunderland.png">WINTERWUNDERLAND</option>
