--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    </head>
    <header>
-      <p style="text-align: center;"><img src ="images/VALORANT-text.png" alt = "VALORANT-text" style="width: 300px;"></p>
+      <div class="header">
+         <div class="innerHeader">
+            <div class="logoContainer">
+               <h1>GLITCHPOP.<span>org</span></h1>
+            </div>
+
+            <ul class="nav">
+               <a><li>COLLECTION</li></a>
+               <a><li>SAVED</li></a>
+               <a><li>CONTACT</li></a>
+            </ul>
+         </div>
+      </div>
    </header>
    <body>
       <div class="bodyDiv">
@@ -91,7 +103,7 @@
                      <option value="images/stinger/Stinger_Ego.png">EGO</option>
                      <option value="images/stinger/Stinger_Ego_Green.png">EGO (GREEN)</option>
                      <option value="images/stinger/Stinger_Ego_Red.png">EGO (RED)</option>
-                     <option value="images/stinger/Stinger_Ego_Teal.png">EGO (TEAL)</option>
+                     <option value="images/stinger/Stinger_Ego_Pink.png">EGO (PINK)</option>
                   </optgroup>
                   <option value="images/stinger/Stinger_Prism_2.png">PRISM II</option>
                   <option value="images/stinger/Stinger_Red_Alert.png">RED ALERT</option>
@@ -345,7 +357,7 @@
                      <option value="images/guardian/Guardian_Sovereign_Purple.png">SOVEREIGN (PURPLE)</option>
                      <option value="images/guardian/Guardian_Sovereign_Silver.png">SOVEREIGN (SILVER)</option>
                   </optgroup>
-                  <option value="images/guardian/Guardian_Tethered_Realms.png">TETHERED_REALMS</option>
+                  <option value="images/guardian/Guardian_Tethered_Realms.png">TETHERED REALMS</option>
                   <option value="images/guardian/Guardian_VALORANT_Go_Vol1.png">VALORANT GO VOL1</option>
                </select>
             </div>
@@ -413,7 +425,7 @@
                      <option value="images/operator/Operator_Spline_Green.png">SPLINE (GREEN)</option>
                      <option value="images/operator/Operator_Spline_Red.png">SPLINE (RED)</option>
                   </optgroup>
-                  <option value="images/operator/Operator_Tethered_Realms.png">TETHERED_REALMS</option>
+                  <option value="images/operator/Operator_Tethered_Realms.png">TETHERED REALMS</option>
                </select>
             </div>
          </div>
@@ -626,12 +638,12 @@
                      <option value="images/ares/Ares_Jigsaw_Astra.png">JIGSAW (ASTRA)</option>
                      <option value="images/ares/Ares_Jigsaw_Skye.png">JIGSAW (SKYE)</option>
                      <option value="images/ares/Ares_Jigsaw_Yoru.png">JIGSAW (YORU)</option>
-                  <option value="images/ares/Ares_Minima.png">MINIMA</option>
-                  <option value="images/ares/Ares_Nebula.png">NEBULA</option>
-                  <option value="images/ares/Ares_Outpost.png">OUTPOST</option>
-                  <option value="images/ares/Ares_Polyfrog.png">POLYFROG</option>
-                  <option value="images/ares/Ares_Rush.png">RUSH</option>
-                  <option value="images/ares/Ares_Sakura.png">SAKURA</option>
+                     <option value="images/ares/Ares_Minima.png">MINIMA</option>
+                     <option value="images/ares/Ares_Nebula.png">NEBULA</option>
+                     <option value="images/ares/Ares_Outpost.png">OUTPOST</option>
+                     <option value="images/ares/Ares_Polyfrog.png">POLYFROG</option>
+                     <option value="images/ares/Ares_Rush.png">RUSH</option>
+                     <option value="images/ares/Ares_Sakura.png">SAKURA</option>
                   <optgroup label="SINGULARITY">
                      <option value="images/ares/Ares_Singularity.png">SINGULARITY</option>
                      <option value="images/ares/Ares_Singularity_Blue.png">SINGULARITY (BLUE)</option>
@@ -701,7 +713,7 @@
                      <option value="images/ghost/Ghost_Sovereign_Purple.png">SOVEREIGN (PURPLE)</option>
                      <option value="images/ghost/Ghost_Sovereign_Silver.png">SOVEREIGN (SILVER)</option>
                   </optgroup>
-                  <option value="images/ghost/Ghost_Tethered_Realms.png">TETHERED_REALMS</option>
+                  <option value="images/ghost/Ghost_Tethered_Realms.png">TETHERED REALMS</option>
                   <option value="images/ghost/Ghost_VALORANT_Go_Vol1.png">VALORANT GO VOL1</option>
                   <option value="images/ghost/Ghost_Vendetta.png">VENDETTA (REYNA)</option>
                   <option value="images/ghost/Ghost_Winterwunderland.png">WINTERWUNDERLAND</option>
@@ -818,7 +830,7 @@
                      <option value="images/vandal/Vandal_SOL_Pink.png">S.O.L. (PINK)</option>
                      <option value="images/vandal/Vandal_SOL_Red_Green.png">S.O.L. (RED/GREEN)</option>
                   </optgroup>
-                  <option value="images/vandal/Vandal_Tethered_Realms.png">TETHERED_REALMS</option>
+                  <option value="images/vandal/Vandal_Tethered_Realms.png">TETHERED REALMS</option>
                   <option value="images/vandal/Vandal_Wasteland.png">WASTELAND</option>
                   <option value="images/vandal/Vandal_Winterwunderland.png">WINTERWUNDERLAND</option>
                </select>
@@ -947,8 +959,8 @@
                   </optgroup>
                   <option value="images/melee/Melee_Elderflame.png">ELDERFLAME</option>
                   <option value="images/melee/Melee_Forsaken.png">FORSAKEN</option>
-                  <option value="images/melee/Melee_Glitchpop_Axe.png">GLITCHPOP (AXE</option>
-                  <option value="images/melee/Melee_Glitchpop_Dagger.png">GLITCHPOP (DAGGER</option>
+                  <option value="images/melee/Melee_Glitchpop_Axe.png">GLITCHPOP (AXE)</option>
+                  <option value="images/melee/Melee_Glitchpop_Dagger.png">GLITCHPOP (DAGGER)</option>
                   <option value="images/melee/Melee_GUN.png">G.U.N.</option>
                   <option value="images/melee/Melee_Hivemind.png">HIVEMIND</option>
                   <option value="images/melee/Melee_Ion.png">ION</option>
@@ -995,12 +1007,12 @@
                      <option value="images/melee/Melee_SOL_Blue_Purple.png">S.O.L. (BLUE/PURPLE)</option>
                      <option value="images/melee/Melee_SOL_Pink.png">S.O.L. (PINK)</option>
                      <option value="images/melee/Melee_SOL_Red_Green.png">S.O.L. (RED/GREEN)</option>
-                  <option value="images/melee/Melee_Songsteel.png">SONGSTEEL</option>
-                  <option value="images/melee/Melee_Sovereign.png">SOVEREIGN</option>
-                  <option value="images/melee/Melee_Spline.png">SPLINE</option>
+                     <option value="images/melee/Melee_Songsteel.png">SONGSTEEL</option>
+                     <option value="images/melee/Melee_Sovereign.png">SOVEREIGN</option>
+                     <option value="images/melee/Melee_Spline.png">SPLINE</option>
                   <optgroup label="TETHERED REALMS">
-                     <option value="images/melee/Melee_Tethered_Realms.png">TETHERED_REALMS</option>
-                     <option value="images/melee/Melee_Tethered_Realms_Dual.png">TETHERED_REALMS (DUAL)</option>
+                     <option value="images/melee/Melee_Tethered_Realms.png">TETHERED REALMS</option>
+                     <option value="images/melee/Melee_Tethered_Realms_Dual.png">TETHERED REALMS (DUAL)</option>
                   </optgroup>
                   <option value="images/melee/Melee_VALORANT_Go_Vol1.png">VALORANT GO VOL1</option>
                   <option value="images/melee/Melee_Winterwunderland.png">WINTERWUNDERLAND</option>
