--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>VALORANT Collection Maker</title>
+      <title>GLITCHPOP.org</title>
       <link rel="icon" href="images/VALORANT.png">
       <link href="style.css" rel="stylesheet" type="text/css">
+      <link href="fonts.css" rel="stylesheet" type="text/css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    </head>
    <header>
-      <div class="header">
-         <div class="innerHeader">
-            <div class="logoContainer">
-               <h1>GLITCHPOP.<span>org</span></h1>
-            </div>
-
-            <ul class="nav">
-               <a><li>COLLECTION</li></a>
-               <a><li>SAVED</li></a>
-               <a><li>CONTACT</li></a>
-            </ul>
+      <div id="header">
+         <div class="logo">
+            <img src="images/GLITCHPOP-Logo.png">
          </div>
+         <nav class="menu">
+            <ul>
+               <a href="index.html"><li>COLLECTION</li></a>
+               <a href="saved.html"><li>SAVED</li></a>
+               <a href="contact.html"><li>CONTACT</li></a>
+            </ul>
+         </nav>
       </div>
    </header>
    <body>
@@ -1024,6 +1024,7 @@
          </div>
       </div>
    </body>
-   <footer>
-   </footer>
+   <!--<footer>
+      <p>COPYRIGHT GLITCHPOP.ORG 2021</p>
+   </footer>-->
 </html>
