--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>GLITCHPOP.org</title>
-      <link rel="icon" href="images/VALORANT.png">
+      <link rel="icon" href="images/GLITCHPOP-Logo.png">
       <link href="style.css" rel="stylesheet" type="text/css">
       <link href="fonts.css" rel="stylesheet" type="text/css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
