--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
          </div>
          <nav class="menu">
             <ul>
-               <a class="current" href="index.html"><li>COLLECTION</li></a>
+               <a class="current" href="index.html"><li>HOME</li></a>
                <a href="saved.html"><li>SAVED</li></a>
                <a href="contact.html"><li>CONTACT</li></a>
+            </ul>
+         </nav>
+         <nav class="login">
+            <ul>
+               <a href="login.html"><li>LOGIN</li></a>
             </ul>
          </nav>
       </div>
