--- a/index.html
+++ b/index.html
@@ -1039,22 +1039,37 @@
       <script>
          function reset() {
             $("div.select-dropdown select").prop('selectedIndex',0);
+            reset1();
+            reset2();
+            reset3();
+            reset4();
+         }
+
+         function reset1() {
             classicImage.src = "images/classic/Classic.png";
             stingerImage.src = "images/stinger/Stinger.png";
             bulldogImage.src = "images/bulldog/Bulldog.png";
             marshalImage.src = "images/marshal/Marshal.png";
+         }
+         function reset2() {
             shortyImage.src = "images/shorty/shorty.png";
             spectreImage.src = "images/spectre/spectre.png";
             guardianImage.src = "images/guardian/guardian.png";
             operatorImage.src = "images/operator/operator.png";
+         }
+         function reset3() {
             frenzyImage.src = "images/frenzy/frenzy.png";
             buckyImage.src = "images/bucky/bucky.png";
             phantomImage.src = "images/phantom/phantom.png";
             aresImage.src = "images/ares/ares.png";
+         }
+         function reset4() {
             ghostImage.src = "images/ghost/ghost.png";
             judgeImage.src = "images/judge/judge.png";
             vandalImage.src = "images/vandal/vandal.png";
             odinImage.src = "images/odin/odin.png";
+         }
+         function reset5() {
             sheriffImage.src = "images/sheriff/sheriff.png";
             meleeImage.src = "images/melee/melee.png";
          }
