--- a/index.html
+++ b/index.html
@@ -1039,39 +1039,24 @@
       <script>
          function reset() {
             $("div.select-dropdown select").prop('selectedIndex',0);
-            reset1();
-            reset2();
-            reset3();
-            reset4();
-         }
-
-         function reset1() {
             classicImage.src = "images/classic/Classic.png";
             stingerImage.src = "images/stinger/Stinger.png";
             bulldogImage.src = "images/bulldog/Bulldog.png";
             marshalImage.src = "images/marshal/Marshal.png";
-         }
-         function reset2() {
-            shortyImage.src = "images/shorty/shorty.png";
-            spectreImage.src = "images/spectre/spectre.png";
-            guardianImage.src = "images/guardian/guardian.png";
-            operatorImage.src = "images/operator/operator.png";
-         }
-         function reset3() {
-            frenzyImage.src = "images/frenzy/frenzy.png";
-            buckyImage.src = "images/bucky/bucky.png";
-            phantomImage.src = "images/phantom/phantom.png";
-            aresImage.src = "images/ares/ares.png";
-         }
-         function reset4() {
-            ghostImage.src = "images/ghost/ghost.png";
-            judgeImage.src = "images/judge/judge.png";
-            vandalImage.src = "images/vandal/vandal.png";
-            odinImage.src = "images/odin/odin.png";
-         }
-         function reset5() {
-            sheriffImage.src = "images/sheriff/sheriff.png";
-            meleeImage.src = "images/melee/melee.png";
+            shortyImage.src = "images/shorty/Shorty.png";
+            spectreImage.src = "images/spectre/Spectre.png";
+            guardianImage.src = "images/guardian/Guardian.png";
+            operatorImage.src = "images/operator/Operator.png";
+            frenzyImage.src = "images/frenzy/Frenzy.png";
+            buckyImage.src = "images/bucky/Bucky.png";
+            phantomImage.src = "images/phantom/Phantom.png";
+            aresImage.src = "images/ares/Ares.png";
+            ghostImage.src = "images/ghost/Ghost.png";
+            judgeImage.src = "images/judge/Judge.png";
+            vandalImage.src = "images/vandal/Vandal.png";
+            odinImage.src = "images/odin/Odin.png";
+            sheriffImage.src = "images/sheriff/Sheriff.png";
+            meleeImage.src = "images/melee/Melee.png";
          }
       </script>
    </body>
