--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
          <nav class="menu">
             <ul>
                <a class="current" href="index.html"><li>HOME</li></a>
-               <a href="saved.html"><li>SAVED</li></a>
-               <a href="contact.html"><li>CONTACT</li></a>
+               <a href=""><li>SAVED</li></a>
+               <a href=""><li>CONTACT</li></a>
             </ul>
          </nav>
          <nav class="login">
