--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
          </div>
          <nav class="menu">
             <ul>
-               <a class="current" href="index.html"><li>HOME</li></a>
-               <a href=""><li>SAVED</li></a>
-               <a href=""><li>CONTACT</li></a>
+               <a class="current" href="index.html">
+                  <li>HOME</li>
+               </a>
+               <a href="">
+                  <li>SAVED</li>
+               </a>
+               <a href="">
+                  <li>CONTACT</li>
+               </a>
             </ul>
          </nav>
          <nav class="login">
             <ul>
-               <a href="login.html"><li>LOGIN</li></a>
+               <a href="login.html">
+                  <li>LOGIN</li>
+               </a>
             </ul>
          </nav>
       </div>
@@ -471,7 +479,7 @@
                   <option value="images/frenzy/Frenzy_Monarch.png">MONARCH</option>
                   <optgroup label="ORIGIN">
                      <option value="images/frenzy/Frenzy_Origin.png">ORIGIN</option>
-                     <option value="images/frenzy/Frenzy_Origin_Purple.png">ORIGIN (PURPLE)</option>
+                     <option value="images/frenzy/Frenzy_Origin_Green.png">ORIGIN (GREEN)</option>
                      <option value="images/frenzy/Frenzy_Origin_Red.png">ORIGIN (RED)</option>
                      <option value="images/frenzy/Frenzy_Origin_White.png">ORIGIN (WHITE)</option>
                   </optgroup>
@@ -897,7 +905,7 @@
                   <option value="images/sheriff/Sheriff_Death_Wish.png">DEATH WISH (YORU)</option>
                   <option value="images/sheriff/Sheriff_Game_Over.png">GAME OVER (JETT)</option>
                   <option value="images/sheriff/Sheriff_Ion.png">ION</option>
-                  <option value="images/sheriff/Sheriff_K_TAC.png"><K/TAC></option>
+                  <option value="images/sheriff/Sheriff_K_TAC.png">K/TAC</option>
                   <optgroup label="LIGHTWAVE">
                      <option value="images/sheriff/Sheriff_Lightwave.png">LIGHTWAVE</option>
                      <option value="images/sheriff/Sheriff_Lightwave_Black.png">LIGHTWAVE (BLACK)</option>
@@ -941,14 +949,12 @@
                </select>
             </div>
          </div>
-
          <div class="resetButton">
             <button type="button" onclick="reset()">RESET</button>
          </div>
          <div class="saveButton">
             <button type="button" onclick="reset()">SAVE</button>
          </div>
-
          <div class="bottom meleeDiv">
             <div class="col4">
                <div><img id="meleeImage" class="profile" src="images/melee/Melee.png"></div>
@@ -1061,5 +1067,5 @@
    </body>
    <!--<footer>
       <p>COPYRIGHT GLITCHPOP.ORG 2021</p>
-   </footer>-->
+      </footer>-->
 </html>
