--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </script>
 </head>
 <header>
-    <img class="logo" src="images/GLITCHPOP-3D.png" alt="logo">
+    <img class="logo" src="GLITCHPOP3D.png" alt="logo">
     <nav>
         <ul class="navLinks">
             <li><a href="#" class="selected">HOME</a></li>
