--- a/mobile.html
+++ b/mobile.html
@@ -10,7 +10,7 @@
     <title>GLITCHPOP.ORG</title>
 </head>
 <header>
-    <img class="logo" src="images/GLITCHPOP-3D.png" alt="logo">
+    <img class="logo" src="GLITCHPOP3D.png" alt="logo">
     <nav>
         <ul class="navLinks">
             <li><a href="#" class="selected">HOME</a></li>
