--- a/mobile.html
+++ b/mobile.html
@@ -9,17 +9,19 @@
     <link href="mobile.css" rel="stylesheet" type="text/css">
     <title>GLITCHPOP.ORG</title>
 </head>
-<header>
-    <img class="logo" src="GLITCHPOP3D.png" alt="logo">
+
+<header class="sticky">
+    <a href="index.html"><img class="logo" src="GLITCHPOP3D.png" alt="logo"></a>
     <nav>
         <ul class="navLinks">
-            <li><a href="#" class="selected">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#">SAVED</a></li>
             <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
-    <a class="login" href="index.html"><button>LOGIN</button></a>
+    <a class="loginButton" href="login/login.html"><button>LOGIN</button></a>
  </header>
+
 <body>
     <div class="main">
         <h1>Sorry!</h1>
@@ -30,7 +32,7 @@
 
 <footer>
     <div class="footerContainer">
-        <p>&copy; 2021 COPYRIGHT GLITCHPOP.ORG</p>
+        <p>&copy; 2021 COPYRIGHT <span>GLITCHPOP.ORG</span></p>
     </div>
 </footer>
 </html>
