--- a/login/signup.html
+++ b/login/signup.html
@@ -46,11 +46,11 @@
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
 			<form class="login100-form validate-form">
 				<span class="login100-form-title p-b-37">
-					LOGIN
+					REGISTER
 				</span>
 
 				<div class="wrap-input100 validate-input m-b-20" data-validate="Enter Username">
-					<input class="input100" type="name" name="username" placeholder="Username" autocomplete="off"	>
+					<input class="input100" type="name" name="username" placeholder="Username" autocomplete="off">
 					<span class="focus-input100"></span>
 				</div>
 
@@ -61,13 +61,13 @@
 
 				<div class="container-login100-form-btn">
 					<button class="login100-form-btn">
-						SIGN IN
+						SIGN UP
 					</button>
 				</div>
 
 				<div class="text-center p-t-50 p-b-10">
 					<span class="txt1">
-						Or login with:
+						Or signup with:
 					</span>
 				</div>
 
@@ -78,12 +78,6 @@
 
 					<a href="#" class="login100-social-item">
 						<img src="images/icons/google.png" alt="GOOGLE">
-					</a>
-				</div>
-
-				<div class="text-center">
-					<a href="signup.html" class="txt2 hov1">
-						SIGN UP
 					</a>
 				</div>
 			</form>
